/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.0.1/userguide/tutorial_java_projects.html
 */

plugins {
    // Apply the java plugin to add support for Java
    id 'java'
    id 'war' 
    id "org.owasp.dependencycheck" version "8.3.1"
    id 'org.sonarqube' version '3.0'
}
java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
 }

sonarqube {
    properties {
        property 'sonar.host.url', 'http://10.180.10.25:9000'
        property "sonar.projectKey", "auruspay_switch"
        property 'sonar.projectName', 'auruspay_switch'
        property 'sonar.java.source', 8
        property 'encoding', 'UTF-8'
        property 'charSet', 'UTF-8'
        property "sonar.java.additionalOpts", "-Xms1024m -Xmx1024m -XX:MaxPermSize=512m"
    }
} 

dependencies {
   
   compileOnly fileTree(dir: 'WebContent/WEB-INF/lib', include: '*.jar')
   implementation fileTree(dir: 'WebContent/WEB-INF/lib', include: 'jpos-2.1.9.jar')
 }   

dependencyCheck {
	scanSet=['WebContent/WEB-INF/lib']
}
sourceSets {
    main {
        java {
            srcDirs 'src' 
       } 
  }
 }
 tasks.withType(JavaCompile) {
    options.warnings = false
}
 war  {
    from ('src') {
        into 'WEB-INF/src'
    }
    from('jsp/ivr'){
        into 'jsp/ivr'
    }
    from('vxml'){
        into 'vxml'
    }
    from('WebContent/util'){
        into 'util'
    }
    from('WebContent/js'){
        into 'js'
    }
    from('WebContent/css'){
        into 'css'
    }
    from('serverconfigure'){
        into 'serverconfigure'
    }
    from('WebContent/WEB-INF/web.xml'){
        into 'WEB-INF'
    }
    from('resources'){
     exclude 'properties'
     exclude 'keys'
     exclude 'schema'
     into 'WEB-INF/classes'
    }
    from ('src/com/auruspay/engine/mail/vm') {
        into 'WEB-INF/classes/com/auruspay/engine/mail/vm'
    }
    from ('src/com/auruspay/manager/issuer/participants/processor/credibanco/resources/modules') {
        into 'WEB-INF/classes/com/auruspay/manager/issuer/participants/processor/credibanco/resources/modules'
    }
    from('resources'){
     include 'properties/*'
     include 'keys/*'
     include 'schema/*'
     into 'resources'
    }
    manifest {
        attributes(
        "Implementation-Title": project.name,
        "Built-By"       : "AurusPerformance Team", 
        "Created-By"     : "Gradle ${gradle.gradleVersion}",
        "Build-Jdk"      : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
        "Build-OS"       : "${System.properties['os.name']} ${System.properties['os.arch']} ${System.properties['os.version']}"
        )   
    }
 }
 
 


           




